--- a/views/dashboard/admin/analytics.ejs
+++ b/views/dashboard/admin/analytics.ejs
@@ -48,7 +48,7 @@
           <span>Chasing Horizons</span>
         </div>
         <div class="sidebar-links">
-          <a href="/dashboard/admin" class="active"
+          <a href="/dashboard/admin"
             ><i class="fas fa-tachometer-alt"></i>
             <span class="link-text">Overview</span></a
           >
@@ -56,7 +56,7 @@
             ><i class="fas fa-users"></i>
             <span class="link-text">Customers</span></a
           > -->
-          <a href="/dashboard/admin/packages"
+          <a href="/dashboard/admin/packages" class="active"
             ><i class="fas fa-chart-bar"></i>
             <span class="link-text active">Packages</span></a
           >
