--- a/views/dashboard/admin/hotelManagement.ejs
+++ b/views/dashboard/admin/hotelManagement.ejs
@@ -44,7 +44,7 @@
           <span>Chasing Horizons</span>
         </div>
         <div class="sidebar-links">
-          <a href="/dashboard/admin" class="active"
+          <a href="/dashboard/admin"
             ><i class="fas fa-tachometer-alt"></i>
             <span class="link-text">Overview</span></a
           >
@@ -56,7 +56,9 @@
             ><i class="fas fa-chart-bar"></i>
             <span class="link-text active">Packages</span></a
           >
-          <a href="/dashboard/admin/hotelManagement"
+          <a
+            href="/dashboard/admin/hotelManagement"
+            class="active"
             ><i class="fas fa-hotel"></i>
             <span class="link-text">Hotel Management</span></a
           >
