Add form validation for package

--- a/views/dashboard/admin/addPackage.ejs
+++ b/views/dashboard/admin/addPackage.ejs
@@ -31,6 +31,10 @@
       rel="stylesheet"
       href="/css/dashboard/admin/package.css"
     />
+    <script
+      defer
+      src="/js/dashboard/admin/addPackage.js"
+    ></script>
   </head>
 
   <body>
