--- a/views/dashboard/admin/index.ejs
+++ b/views/dashboard/admin/index.ejs
@@ -2,16 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Chasing Horizons Admin Dashboard</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="/css/dashboard/admin/styles.css" />
-    <link rel="stylesheet" href="/css/dashboard/admin/index.css" />
-    <link rel="stylesheet" href="/css/dashboard/admin/topbar.css" />
-    <link rel="stylesheet" href="/css/dashboard/admin/sidebar.css" />
+    <link
+      rel="stylesheet"
+      href="/css/dashboard/admin/styles.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/css/dashboard/admin/index.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/css/dashboard/admin/topbar.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/css/dashboard/admin/sidebar.css"
+    />
 
     <script defer src="/js/dashboard/admin/app.js"></script>
   </head>
@@ -19,7 +34,10 @@
   <body>
     <div class="container">
       <div class="sidebar" id="sidebar">
-        <div class="logo-title" onclick="{window.location.href = '/'}">
+        <div
+          class="logo-title"
+          onclick="{window.location.href = '/'}"
+        >
           <span>Chasing Horizons</span>
         </div>
         <div class="sidebar-links">
@@ -27,10 +45,10 @@
             ><i class="fas fa-tachometer-alt"></i>
             <span class="link-text">Overview</span></a
           >
-          <!-- <a href="/dashboard/admin/customers"
+          <a href="/dashboard/admin/customers"
             ><i class="fas fa-users"></i>
             <span class="link-text">Customers</span></a
-          > -->
+          >
           <a href="/dashboard/admin/packages"
             ><i class="fas fa-chart-bar"></i>
             <span class="link-text active">Packages</span></a
@@ -256,7 +274,8 @@
             <a href="#" class="view-all">View All</a>
           </div>
           <div class="destination-list">
-            <% adminAnalytics.populatedResults.forEach(result => { %>
+            <% adminAnalytics.populatedResults.forEach(result =>
+            { %>
             <div class="destination-card">
               <div class="destination-img">
                 <img
@@ -267,7 +286,9 @@
               </div>
               <div class="destination-info">
                 <h4><%= result.item.title %></h4>
-                <p><%= result.totalBookings %> bookings this month</p>
+                <p>
+                  <%= result.totalBookings %> bookings this month
+                </p>
               </div>
             </div>
             <% }); %>
