--- a/views/dashboard/admin/index.ejs
+++ b/views/dashboard/admin/index.ejs
@@ -45,10 +45,10 @@
             ><i class="fas fa-tachometer-alt"></i>
             <span class="link-text">Overview</span></a
           >
-          <a href="/dashboard/admin/customers"
+          <!-- <a href="/dashboard/admin/customers"
             ><i class="fas fa-users"></i>
             <span class="link-text">Customers</span></a
-          >
+          > -->
           <a href="/dashboard/admin/packages"
             ><i class="fas fa-chart-bar"></i>
             <span class="link-text active">Packages</span></a
