--- a/views/dashboard/hotelManager/booking.ejs
+++ b/views/dashboard/hotelManager/booking.ejs
@@ -4,20 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:," />
-    <title>Document</title>
+    <title>Chasing Horizons</title>
 
     <link rel="stylesheet" href="/css/dashboard/hotelManager/booking.css" />
     <link rel="stylesheet" href="/css/dashboard/hotelManager/sidebar.css" />
     <link rel="stylesheet" href="/css/dashboard/hotelManager/styles.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <script defer src="/js/dashboard/hotelManager/sidebar.js"></script>
@@ -44,13 +38,6 @@
           </div>
           <h5>Admin</h5>
           <h5><%=user.email%></h5>
-          <!-- <div class="admin-icons">
-            <span class="material-symbols-outlined">person</span>
-            <span class="material-symbols-outlined"
-              >settings</span
-            >
-            <span class="material-symbols-outlined">logout</span>
-          </div> -->
         </div>
         <hr />
         <br />
@@ -59,41 +46,36 @@
           <div class="link">
             <a href="/dashboard/hotelManager">
               <span class="material-symbols-outlined icon">dashboard</span>
-              Dashboard</a
-            >
+              Dashboard</a>
           </div>
 
           <div class="link active">
             <a href="/dashboard/hotelManager/booking">
               <span class="material-symbols-outlined icon">event</span>
-              Bookings</a
-            >
+              Bookings</a>
           </div>
 
           <div class="link">
             <a href="/dashboard/hotelManager/addRoom">
               <span class="material-symbols-outlined icon">meeting_room</span>
-              Rooms</a
-            >
+              Rooms</a>
           </div>
-          <!-- <div class="dropdown-container">
-            <a href="/dashboard/hotelManager/rooms">All Rooms</a>
-            <a href="/dashboard/hotelManager/addRoom"
-              >Add Rooms</a
-            >
-          </div> -->
+          
+          <div class="link">
+            <a href="/dashboard/hotelManager/myHotel">
+              <span class="material-symbols-outlined icon">hotel</span>
+              My Hotel</a>
+          </div>
         </div>
       </div>
       <div class="main">
         <div class="toggle-btn" id="toggle-sidebar">
-          <button
-            class="toggle-btn"
-            style="padding: 5px; border: none; background: transparent"
-          >
+          <button class="toggle-btn" style="padding: 5px; border: none; background: transparent">
             <i style="color: white; font-size: 26px" class="fas fa-bars"></i>
           </button>
+        </div>
 
-          <div class="main-bookings-header">
+        <div class="main-bookings-header">
             <div class="allbookings">
               <h3>All Bookings</h3>
             </div>
