hotel admin changes

--- a/views/dashboard/admin/hotelManagement.ejs
+++ b/views/dashboard/admin/hotelManagement.ejs
@@ -297,12 +297,12 @@
                   <td>
                     <span
                       class="hotel-status-badge hotel-status-<%=hotel.status%>"
-                      ><%=hotel.status%></span
+                      >Active</span
                     >
                   </td>
                   <td><%=hotel.roomType.length%></td>
 
-                  <td><%=hotel.price%></td>
+                  <td><%=hotel.roomType[0].price%></td>
 
                   <!-- <td>
                     <div class="hotel-action-buttons">
